5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1649_2703.log
== SUBMITION (2019-04-09 18:54:50) 
-- CODE:
idade=int(inpu("qual a idade "))
if(idade=>18):
	mensagem=eleitor
else:
	mensagem=nao_eleitor
-- EXECUTION TIME:
0.200624
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:54:52) 
-- CODE:
idade=int(inpu("qual a idade "))
if(idade=>18):
	mensagem=eleitor
else:
	mensagem=nao_eleitor
-- ERROR:
File "XXXX", line 2
    if(idade=>18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:55:36) 
-- CODE:
idade=int(inpu("qual a idade "))
if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(inpu("qual a idade "))
NameError: name 'inpu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:55:54) 
-- CODE:
idade=int(inpu("qual a idade? "))
if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(inpu("qual a idade? "))
NameError: name 'inpu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:56:02) 
-- CODE:
idade=int(input("qual a idade? "))
if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mensagem=nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:56:05) 
-- CODE:
idade=int(input("qual a idade? "))
if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
-- EXECUTION TIME:
0.219747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2703/main.py", line 3, in <module>
    mensagem=nao_eleitor
NameError: name 'nao_eleitor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:57:08) 
-- CODE:
idade=int(input("qual a idade? "))
if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mensagem=nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:57:33) 
-- CODE:
idade=int(input("qual a idade? "))
nao_eleitor=<18
if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
-- ERROR:
File "XXXX", line 2
    nao_eleitor=<18
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:58:13) 
-- CODE:
idade=int(input("qual a idade? "))

if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
print(mensagem.lower())
-- EXECUTION TIME:
0.14033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2703/main.py", line 4, in <module>
    mensagem=nao_eleitor
NameError: name 'nao_eleitor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:14) 
-- CODE:
idade=int(input("qual a idade? "))

if(idade<18):
	mensagem=nao_eleitor
else:
	mensagem=eleitor
print(mensagem.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem=nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:43) 
-- CODE:
idade=int(input("qual a idade? "))

if(idade<18):
	mensagem=(nao_eleitor)
else:
	mensagem=eleitor
print(mensagem.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem=(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:58:48) 
-- CODE:
idade=int(input("qual a idade? "))

if(idade<18):
	mensagem=(nao_eleitor)
else:
	mensagem=eleitor
print(mensagem.lower())
-- EXECUTION TIME:
0.217688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2703/main.py", line 4, in <module>
    mensagem=(nao_eleitor)
NameError: name 'nao_eleitor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:00:23) 
-- CODE:
idade=int(input("qual a idade? "))

if(idade<18):
	mensagem="nao_eleitor"
else:
	mensagem="eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.11973
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
